fix: background image stretching

--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -105,7 +105,7 @@ a.filled-button:hover {
 	text-align: center;
 	background-position: center center;
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background-size: cover;
 }
 
 .page-heading .text-content h4 {
